docker/k8s/26-shg-comet-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: shg
  name: shg-comet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shg-comet
  template:
    metadata:
      labels:
        app: shg-comet
    spec:
      containers:
      - image: docker-registry.infra.01.k-ciralabs.ca/ciralabs/shg-highway:comet-0.9.3
        imagePullPolicy: Always
        command: 
          - bundle
          - exec 
          - thin 
          - start 
          - --ssl
          - '--address ::'
          - '--port 9443'
          - '--ssl-cert-file /etc/shg/certs/server_prime256v1.crt'
          - '--ssl-key-file /etc/shg/certs/server_prime256v1.key'
        name: shg-comet
        ports:
        - name: api-comet
          containerPort: 9443
          protocol: TCP
        volumeMounts:
        - name: certs
          mountPath: /app/certificates
        - name: config
          mountPath: /app/highway/config/config.yml
          subPath: config.yml
        - name: config
          mountPath: /app/highway/config/database.yml
          subPath: database.yml
        - name: config
          mountPath: /app/highway/config/secret.yml
          subPath: secret.yml
        - name: config
          mountPath: /app/highway/config/initializers/acme.rb
          subPath: acme.rb
        - name: config
          mountPath: /app/highway/config/environments/production.rb
          subPath: production.rb
      volumes:
      - name: certs
        secret: 
          secretName: shg-comet-certs
      - name: config
        configMap:
          name: 'shg-comet-files'
          defaultMode: 420
