docker/k8s/31-shg-comet-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: shg
  labels:
    app: shg-comet
  name: shg-comet
spec:
  ports:
  - name: http-comet-api
    port: 9443
    protocol: TCP
    targetPort: comet-api
  selector:
    app: shg-comet
