docker/k8s/36-shg-comet-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: shg-comet
  namespace: shg
  labels:
    app: shg-comet
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod-cluster-issuer
    ingress.kubernetes.io/ssl-redirect: 'true'
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/add-base-url: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - '*.shg.01.k-ciralabs.ca'
      secretName: shg-01-k-ciralabs-ca-tls
  rules:
    - host: shg-comet.shg.01.k-ciralabs.ca
      http:
        paths:
          - path: /
            backend:
              serviceName: shg-comet
              servicePort: 9443
